implemented update and getbysupplychain
